<resources>
    <string name="fwws_app_name">MobileFWWS</string>
    <string name="info_app_name">ArticleInfo</string>
    <string name="task_app_name">TaskApp</string>
    <string name="multible_alerts">Mehrere Meldungen</string>
    <string name="please_scan_product">Bitte ein Produkt scannen</string>
    <string name="kolli">Kolli</string>
    <string name="piece">Stück</string>
    <string name="quantity_correction">Bestandskorrektur</string>
    <string name="dispo">Dispo</string>
    <string name="goods_receipt">Wareneingang</string>
    <string name="best_before">MHD-Erfassung</string>
    <string name="logout">Ausloggen</string>
    <string name="settings">Einstellungen</string>
    <string name="sync">Synchronisieren</string>
    <string name="fwws">Filialwirtschaft</string>
    <string name="stock_check">Marktdurchgang</string>
    <string name="account_label">FWWS Account</string>
    <string name="warehouse">Lager</string>
    <string name="store">Markt</string>
    <string name="total">Gesamt</string>
    <string name="already_counted">Schon gezählt</string>
    <string name="package_content">Kolliinhalt</string>
    <string name="max_capacity">Max Kapa</string>
    <string name="status">Status</string>
    <string name="correction_detail_title">Bestandskorrektur</string>
    <string name="save_and_next_article">Speichern &amp; Nächster Artikel</string>
    <string name="finish_and_back">Speichern &amp; abschließen</string>
    <string name="scan">Scannen</string>
    <string name="wrong_article">FALSCHER ARTIKEL!</string>
    <string name="edit_verify_through_scan">Bearbeitung durch\nscannen freischalten</string>
    <string name="back_and_add">Zurück und\nÜbernehmen</string>
    <string name="calculate_with_equal">Eingabe mit = bestätigen</string>
    <string name="last_counted">Letzte Zählung</string>
    <string name="kollicontent">Kolliinhalt</string>
    <string name="new_stock">Neuer Bestand</string>
    <string name="msg_stock_quantity_need_capture">Lagerbuchmenge muss erfasst werden</string>
    <string name="hydra_not_installed">Hydra App konnte nicht gefunden werden</string>
    <string name="retry">Erneut versuchen</string>
    <string name="calculatorKeyboardMode">Taschenrechner Keyboard Mode</string>
    <string name="basic_data">Grunddaten</string>
    <string name="goods_movement">Warenbewegung</string>
    <string name="placement">Platzierung</string>
    <string name="wgr">Warengruppe</string>
    <string name="youth_protection">Altersbeschränkung</string>
    <string name="supplier">Lieferant</string>
    <string name="sell_unit">Verkaufseinheit</string>
    <string name="reduce">Reduzierung</string>
    <string name="price_history">Preishistorie</string>
    <string name="please_login_with_scan">Bitte durch scannen anmelden</string>
    <string name="scan_card">Karte Scannen</string>
    <string name="login">Anmelden</string>
    <string name="fwws_in_progress">Filialwirtschaft wird eingerichtet</string>
    <string name="fwws_completed">Filialwirtschaft eingerichtet</string>
    <string name="secured_key">Device Key</string>
    <string name="device">Gerät</string>
    <string name="screen">Bildschirm</string>
    <string name="screen_density">Density</string>
    <string name="android">Android</string>
    <string name="data">Daten</string>
    <string name="no_data">Keine Daten vorhanden</string>
    <string name="open_task">Zu erledigen</string>
    <string name="closed_task">Erledigt</string>
    <string name="hydra_app_name">Hydra</string>
</resources>
