<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/primary" android:checkableBehavior="single">
        <item android:id="@+id/menu_inventory_check"
              android:title="@string/stock_check"/>
        <item android:id="@+id/menu_dispo"
              android:title="@string/dispo"/>
        <item android:id="@+id/menu_goods_receipt"
              android:title="@string/goods_receipt"/>
    </group>


    <group android:id="@+id/secondary" android:checkableBehavior="single">

        <item android:id="@+id/menu_correction"
              android:title="@string/quantity_correction"/>
        <item android:id="@+id/menu_best_before"
              android:title="@string/best_before"/>
    </group>

    <group android:id="@+id/third" android:checkableBehavior="single">

        <item android:id="@+id/menu_user"
              app:showAsAction="always"
              app:actionLayout="@layout/navigation_custom_view"/>

        <item android:id="@+id/menu_logout"
              android:title="@string/logout"
              android:icon="@drawable/ic_logout"/>

        <item android:id="@+id/menu_settings"
              android:title="@string/settings"
              android:icon="@drawable/ic_settings"/>
    </group>

</menu>